RESOLVED FIXED281352
[Unified PDF][iOS] Initial scale/origin is wrong
https://bugs.webkit.org/show_bug.cgi?id=281352
Summary [Unified PDF][iOS] Initial scale/origin is wrong
Sammy Gill
Reported 2024-10-11 17:08:07 PDT
Attachments
Sammy Gill
Comment 1 2024-10-11 17:30:52 PDT
EWS
Comment 2 2024-10-16 10:25:59 PDT
Committed 285273@main (8992eaa3fbdf): <https://commits.webkit.org/285273@main> Reviewed commits have been landed. Closing PR #35083 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.